fixed spacing for forms

--- a/backend/static/css/login_form.css
+++ b/backend/static/css/login_form.css
@@ -1,6 +1,3 @@
-.panel-default{
-  width:200px!important;
-}
 
 .btn-success{
   margin-left: 50px;
@@ -12,6 +9,24 @@
   background-color: #000!important;
   color: #fff!important;
   border: 2px solid #000!important;
+}
+
+.bs-component{
+  width: 50%;
+  margin: 0 auto;
+}
+
+.panel-default{
+  width:100%!important;
+}
+
+p{
+  width: 50%!important;
+margin: 0 auto!important;
+}
+
+.login-panel{
+  width:100%!important;
 }
 
 td, th{
